...
import com.android.wildex.ui.LoadingFail
import com.android.wildex.ui.LoadingScreen
import com.android.wildex.ui.navigation.NavigationTestTags
import com.android.wildex.ui.utils.offline.OfflineScreen

object AchievementsScreenTestTags {
  const val ACHIEVEMENT_GRID = "achievementGrid"

  // Top Bar
  const val TOP_APP_BAR = "achievements_top_app_bar"
  const val TITLE = "achievements_title"
  const val BACK_BUTTON = "achievements_back_button"

...
